# tnxqso-back

./: .pylintrc  active_stations  active_stations.py  clear_stations  clusterFilter.py  clusterProtocol.py  cluster_consumer.py  cluster_filter  cluster_filter.py  common.py  conftest.py  convertStationSettings.py  countries.py  createFtpUsers.py  defaultUserSettings.json  deploy.sh  dx_spot.py  getFtpGps.py  initializedStationSettings.py  migrateGallery.py  parse_rafa  parse_rafa.py  pyproject.toml  readme.md  server_run  site.conf  srv.py  srv.test.py  srvTest.py  srv_run.py  test.py  tnxqso.service  tnxqso.sql  tqdb.py  update_site_qth.py
db-migrations/: 000001_blog_quota.down.sql  000001_blog_quota.up.sql  000002_blog_entry_delete_timestamp.down.sql  000002_blog_entry_delete_timestamp.up.sql  20231116120443_merge_stations_ignore_suffixes.up.sql
test/: test_blog.py  test_cluster.py  test_qso_log.py  test_station_settings.py
tnxqso/: common.py  db.py  rafa.csv  site.conf  srv.py
tnxqso/lib/: cluster_consumer.py
tnxqso/routes/: active_users.py  admin.py  blog.py  chat.py  cluster.py  location.py  private_messages.py  qso_log.py  station_settings.py  station_user_bans.py  user.py  visitors_stats.py
tnxqso/scripts/: active_stations.py  clear_stations.py  cluster_filter.py  parse_rafa.py
tnxqso/scripts/site_migrations/: clear_rabbitmq_exchanges.py  extract_donate_info_from_settings.py  remove_station_suffixes.py
tnxqso/services/: auth.py  chat.py  email.py  rabbitmq.py  station_dir.py
