[tool.poetry]
name = "tnxqso"
version = "0.1.0"
description = "tnxqso.com backend server"
authors = ["Alexander Bezguzov <alexbzg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8"
simplejson = "^3.19"
aiopg = "^1.4"
pymongo = "^4.6"
python-ffmpeg = "^2.0"
Wand = "^0.6"
httpx = "^0.25"
pika = "^1.3"
PyJWT = "^2.8"
reverse_geocoder = "^1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest_asyncio = "^0.21"

[tool.poetry.scripts]
server_run = "tnxqso.srv:run"
active_stations = "tnxqso.scripts.active_stations:main"
clear_stations = "tnxqso.scripts.clear_stations:main"
cluster_filter = "tnxqso.scripts.cluster_filter:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
